// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Editor Node renders as expected 1`] = `
<div>
  <li
    data-hanging-indent={true}
  />
</div>
`;

exports[`Line Editor Node renders with children 1`] = `
<div>
  <li>
    children!
  </li>
</div>
`;

exports[`Line Editor Node renders with children with colored text 1`] = `
<div>
  <li
    style={
      Object {
        "color": "Black",
      }
    }
  >
    <div
      node={
        Object {
          "children": Array [
            Object {
              "color": "Black",
            },
          ],
        }
      }
    />
  </li>
</div>
`;

exports[`Line Editor Node renders without content 1`] = `
<div>
  <li />
</div>
`;

exports[`Line Editor Node renders without hanging indent 1`] = `
<div>
  <li />
</div>
`;
